--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>reactive_robot</name>
+  <name>reactive</name>
   <version>0.0.0</version>
   <description>The reactive_robot package</description>
 
